# kurz-ai-agenti

./: .gitignore  README.md  requirements.txt
.github/: copilot-instructions.md
.github/core/: coding-standards.md  documentation-protocol.md  git-commit.md  meta-prompt.md  project-guide.md  quality-gates.md  session-mgmt.md  testing.md  think-first.md
.github/examples/: coding-examples.md  git-commit-examples.md  template-examples.md  testing-examples.md  think-first-examples.md
.github/quick-reference/: bug-report.md  handoff.md  new-chat.md  pm-commands.md  task-complete.md
.github/templates/: epic-breakdown.md  session-bug-fix.md  session-exploration.md  session-new-feature.md  session-refactoring.md
.github/workflows/: bug-fix.md  exploration.md  (+3 more)
lectures/: .gitkeep
projects/: .gitkeep
workspace/: .quick-reference  bugs.md  session-log.md
workspace/assignments/03-LangChain-Graph Agent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  qdrant.Dockerfile
workspace/assignments/03-LangChain-Graph Agent/src/: config.py
workspace/assignments/03-LangChain-Graph Agent/src/agent/: graph.py  memory.py  prompts.py
workspace/assignments/03-LangChain-Graph Agent/src/tools/: analysis.py  crypto.py  macro.py  markets.py  search.py  server.py
workspace/assignments/03-LangChain-Graph Agent/src/ui/: app.py  charts.py
workspace/assignments/03-LangChain-Graph Agent/tests/: conftest.py  test_agent.py  test_analysis.py  test_crypto.py  test_integration.py  test_macro.py  test_markets.py  test_memory.py  test_search.py
(+18 files in other folders)
